--- a/connect4/index.html
+++ b/connect4/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Connect Four Console</title>
     <link href="./style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <div class="container">
+      <div class="turn">
+        <div class="board"></div>
+      </div>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
