created web view

--- a/connect4/index.html
+++ b/connect4/index.html
@@ -8,9 +8,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="turn">
-        <div class="board"></div>
-      </div>
+      <h1 class="turn"></h1>
+      <div class="board"></div>
     </div>
     <script src="./script.js"></script>
   </body>
